<resources>
    <!-- General -->
    <string name="app_name">Curahan Mental</string>
    <string name="title_home">Beranda</string>
    <string name="title_journal">Jurnal</string>
    <string name="title_kindliness_message">Pesan Kebaikan</string>
    <string name="logo_name">Curahan Mental Logo</string>

    <!-- Onboarding Section -->
    <string name="skip_onboarding">Skip</string>
    <string name="onboarding_start">Ayo jernihkan pikiranmu!</string>
    <string name="header_onboarding1">Curahkan Mentalmu</string>
    <string name="overview_onboarding1">Tuliskan keluh kesah anda disini, jangan biarkan semuanya tersimpan dikepala anda.</string>
    <string name="header_onboarding2">Relaksasikan Jiwa</string>
    <string name="overview_onboarding2">Jiwa dan pikiran anda akan lebih tenang sehingga anda bisa tidur dengan nyenyak</string>
    <string name="header_onboarding3">Dukungan Hangat</string>
    <string name="overview_onboarding3">Temukan pesan-pesan yang akan membuat anda termotivasi dan merasa lebih baik!</string>

    <!-- Register Section -->
    <string name="create_account">Membuat sebuah akun</string>
    <string name="hint_firstname">Nama Depan</string>
    <string name="hint_lastname">Nama Belakang</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="buat_akun2">Buat Akun</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="create_account_tagline">Buat akun untuk memulai perjalanan Anda</string>
    <string name="login">Masuk</string>
    <string name="account_created">Akun telah berhasil dibuat.</string>
    <string name="account_existed">Akun sudah pernah didaftarkan sebelumnya.</string>

    <!-- Sign In Section -->
    <string name="signin_account">Masuk</string>
    <string name="signin_account_tagline">Silakan masuk dengan akun anda</string>
    <string name="signout_account">Keluar dari akun</string>
    <string name="signin_question">Belum memiliki akun?</string>
    <string name="signin_register_flow">Daftar sekarang</string>

    <!-- Error -->
    <string name="error_firstname">Mohon masukkan nama depan</string>
    <string name="error_lastname">Mohon masukkan nama belakang</string>
    <string name="error_email">Mohon masukkan e-mail</string>
    <string name="error_email2">Mohon masukkan format E-mail yang benar</string>
    <string name="error_password">Mohon masukkan password</string>
    <string name="error_password2">Password tidak boleh kurang dari 6 karakter.</string>
    <string name="logout_button">Logout Button</string>


    <!-- Home -->
    <string name="title_home_greetings">Selamat datang, </string>
    <string name="title_home_greetings2">semoga anda dalam keadaan yang baik</string>
    <string name="title_home_tips">Tips</string>
    <string name="title_home_article">Article</string>
    <string name="message_home_article">Article</string>
    <string name="message_home_tips">Jaga Kesehatan Mental</string>
    <string name="filter_button">Filter Button</string>
    <string name="add_journal">Add Journal</string>
    <string name="tips">mengatasi depresi yang berkelanjutan</string>
    <string name="home_tips_button">Lihat</string>
    <string name="message_home_tips2">Yuk, lihat apa saja tips-nya</string>
    <string name="title_tips">Tips</string>
    <string name="title_tips_detail">Detail Tips</string>
    <string name="go_to_kindness_message">lihat sekarang juga!</string>

    <!-- settings -->
    <string name="title_settings">Account\'s Setting</string>
    <string name="settings_logout">Log Out</string>
    <string name="title_settings_account">Akun Anda</string>
    <string name="title_home_banner">Temukan pesan dukungan</string>
    <!-- article -->
    <string name="article_title_home">Cara Mengatasi Depresi Berkelanjutan</string>
    <string name="article_description_home">Sebaiknya jangan begadang dan perbanyak olahraga sehingga menjaga imun tubuh hehe</string>
    <string name="title_article">Article</string>

    <!-- Journal -->
    <string name="stress_level_header">Seberapa tingkat stres Anda saat ini?</string>
    <string name="stress_level_header2">Kejadian apa yang mempengaruhi stres Anda saat ini?</string>
    <string name="stress_slider">Stress Slider</string>
    <string name="pokemin">Pokemin</string>
    <string name="godzimax">Godzimax</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="stress_level">Tingkat Stress</string>
    <string name="event">Kejadian</string>
    <string name="journal">Journal\n %s</string>
    <string name="edit_journal">Edit Journal %s</string>
    <string name="manage_event">Skenario Ideal</string>
    <string name="reason">Penyebab Asli</string>
    <string name="stress_percentage">%d %% </string>
    <string name="title_placeholder">Title</string>
    <string name="event_detail">Deskripsikan situasi tersebut, apa yang terjadi dan mengapa</string>
    <string name="detail">Detail</string>
    <string name="ideal_solution">Solusi Ideal</string>
    <string name="good">Baik</string>
    <string name="bad">Buruk</string>
    <string name="confused">Kebingungan</string>
    <string name="reaction">Analisa reaksimu, apa sekiranya penyebab asli dari reaksi tersebut?</string>
    <string name="reaction_question">Silahkan analisa dan tulis penyebab asli reaksi Anda dalam keadaaan yang tenang dan nyaman</string>
    <string name="selesai">Selesai</string>
    <string name="manage_event_question">Bagaimana Anda mengelola kejadian yang membuat stres tersebut?</string>
    <string name="ideal_solution_question">Deskripsikan apa yang seharusnya Anda lakukan, skenario ideal Anda</string>
    <string name="journal_added">Jurnal telah ditambahkan</string>
    <string name="stress_percent">Stress: %d %%</string>
    <string name="article_continue_read">Lanjut Baca</string>
    <string name="all_journal">Semua jurnal</string>
    <string name="by_stress_levels">Berdasarkan tingkat stres</string>
    <string name="by_date">Berdasarkan tanggal</string>
    <string name="date_placeholder">Kamis, 09 Desember 2021</string>
    <string name="delete_button">Delete Button</string>
    <string name="percent_20">20%</string>
    <string name="event_option">Pilihan Opsi Kejadian</string>
    <string name="manage_event_option">Pilihan Opsi Sikap</string>
    <string name="reason_event_option">Pilihan Opsi Penyebab</string>
    <string name="joker">Joker</string>
    <string name="del_journal">Hapus jurnal ini?</string>
    <string name="help_journal">
        Silahkan nilai tingkat stres berdasarkan perasaan Anda saat ini:\n\n
        <b>0:</b> Keadaan paling relax dan damai.\n
        <b>10:</b> Keadaan tidak stres dan terfokus.\n
        <b>20:</b> Keadaan sedikit sedih dan terganggu.\n
        <b>30:</b> Keadaan khawatir atau kesal;namun masih bisa berfungsi.\n
        <b>40:</b> Keadaan khawatir dan cemas tingkat sedang.\n
        <b>50:</b> Keadaan cemas dan tidak nyaman.\n
        <b>60:</b> Keadaan tidak nyaman tingkat sedang ke kuat.\n
        <b>70:</b> Keadaan tidak nyaman mendominasi dan kesulitan untuk berfungsi normal.\n
        <b>80:</b> Keadaan cemas dan panik, hilang fokus dan cemas pada tubuh.\n
        <b>90:</b> Keadaan sangat cemas dan putus asa hingga tidak dapat menangani.\n
        <b>100:</b> Keadaan depresi dan hampir breakdown\n

    </string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="ok">Oke</string>
    <string name="update">Perbarui</string>

    <!-- Kindliness Message -->
    <string name="message_content">Isi Pesan</string>
    <string name="name">Nama</string>
    <string name="kindliness_message">Pesan Kebaikan</string>
    <string name="add_message">Tambahkan Pesan</string>
    <string name="add">Tambah</string>
    <string name="cancel">Batal</string>
    <string name="kindliness_message_board_title">Papan Pesan Kebaikan</string>
    <string name="kind_message_image">Kind Message Image</string>
    <string name="success_message">Pesan telah berhasil ditambahkan</string>
    <string name="failure_message">Maaf, pesan gagal ditambahkan</string>
    <string name="enter_message">Silahkan masukkan pesan terlebih dahulu</string>
    <string name="back_button">Back Button</string>
    <string name="tips_image">Tips Image</string>
    <string name="not_available">Konten belum tersedia</string>

    <!-- Spinner array -->
    <string-array name="event">
        <item>Deadline pada kerja/studi</item>
        <item>Masalah pada hubungan</item>
        <item>Pertengkaran keluarga</item>
        <item>Kekurangan uang</item>
        <item>Tidak ada hal yang menarik lagi</item>
        <item>Kesalahpahaman</item>
        <item>Konflik dengan rekan kerja/studi</item>
        <item>Ujian</item>
        <item>Kemacetan</item>
        <item>Lainnya…</item>
    </string-array>

    <string-array name="manage_event">
        <item>Bagus</item>
        <item>Kebingungan</item>
        <item>Buruk</item>
    </string-array>

    <string-array name="reason">
        <item>Tidak percaya diri</item>
        <item>Ketidakpastian masa depan</item>
        <item>Sulit untuk dijelaskan</item>
        <item>Persimisme</item>
        <item>Hilang kendali</item>
        <item>Takut kesendirian</item>
        <item>Terlalu berekspektasi</item>
        <item>Suatu hal tidak terlalu penting</item>
        <item>Suatu hal terlalu penting</item>
        <item>Lainnya…</item>
    </string-array>

</resources>