<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/constraint_guide_left_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/constraint_guide_right_percent" />

    <ImageView
        android:id="@+id/cm_icon"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:contentDescription="@string/logo_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/curahan_logo2" />

    <TextView
        android:id="@+id/signin_header"
        style="@style/Text.Header1"
        android:text="@string/signin_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/cm_icon" />

    <TextView
        android:id="@+id/signin_header2"
        style="@style/Text.SubHeader2"
        android:text="@string/signin_account_tagline"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/signin_header" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_24dp"
        android:layout_marginTop="@dimen/dimens_48dp"
        android:layout_marginEnd="@dimen/dimens_24dp"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/signin_header2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="255"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_24dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="@dimen/dimens_24dp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="@id/guideline_left"
        app:layout_constraintStart_toStartOf="@id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signin_ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="255"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/curahan_btn_orange"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signin_account"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1" />

    <TextView
        android:id="@+id/haveaccount"
        style="@style/Text.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signin_question"
        app:layout_constraintEnd_toStartOf="@+id/signin_to_register_flow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/signin_btn" />

    <TextView
        android:id="@+id/signin_to_register_flow"
        style="@style/Text.SubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/signin_register_flow"
        android:textColor="@color/curahan_linktext"
        app:layout_constraintBottom_toBottomOf="@+id/haveaccount"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/haveaccount"
        app:layout_constraintTop_toTopOf="@+id/haveaccount" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/curahan_btn_orange"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>