<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.journal.add.component.AddJournalStressLevelFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/custom_action_bar_add_journal_help" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/stress_page_header"
        style="@style/Text.Header3"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/stress_level_header"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stress_indicator"
        style="@style/TextInputLayoutStyle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stress_page_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="255"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/curahan_dark_green"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/stress_slider"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="100.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokemin" />

    <ImageView
        android:id="@+id/pokemin"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/pokemin"
        android:src="@drawable/pokemon"
        app:layout_constraintEnd_toStartOf="@+id/godzimax"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stress_indicator" />

    <ImageView
        android:id="@+id/godzimax"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/godzimax"
        android:src="@drawable/godzilla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pokemin"
        app:layout_constraintTop_toBottomOf="@+id/stress_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/button_state_color"
        android:clickable="false"
        android:enabled="false"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/selanjutnya"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider" />


</androidx.constraintlayout.widget.ConstraintLayout>