<androidx.cardview.widget.CardView
    android:layout_width="330dp"
    android:layout_height="165dp"
    android:layout_marginTop="10dp"
    android:elevation="@dimen/dimens_10dp"
    app:cardCornerRadius="@dimen/dimens_24dp"
    android:layout_marginEnd="@dimen/dimens_16dp"
    app:layout_constraintEnd_toEndOf="@id/guideline_right"
    app:layout_constraintStart_toStartOf="@id/guideline_left"
    app:layout_constraintTop_toBottomOf="@id/home_greetings2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/curahan_soft_brown"
        >

        <ImageView
            android:id="@+id/home_banner_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-8dp"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="@dimen/dimens_10dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:layout_marginEnd="60dp"
            android:baselineAlignBottom="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/kind_message_image"
            android:src="@drawable/curahan_banner2" />

        <TextView
            android:id="@+id/home_banner_text"
            style="@style/Text.SubHeader1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginBottom="@dimen/dimens_48dp"
            android:text="@string/title_home_banner"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_btn_cta"
            android:layout_width="200dp"
            android:layout_height="36dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginBottom="@dimen/dimens_16dp"
            android:backgroundTint="@color/curahan_bg_white"
            android:text="@string/go_to_kindness_message"
            android:textAllCaps="false"
            android:textColor="@color/curahan_black_text"
            android:textSize="11sp"
            app:cornerRadius="@dimen/dimens_24dp" />

    </FrameLayout>

</androidx.cardview.widget.CardView>