<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/curahan_bg_white"
    android:orientation="vertical"
    tools:context=".ui.kindlinessmessage.add.AddMessageDialogFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/constraint_guide_left_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/constraint_guide_right_percent" />

    <TextView
        android:id="@+id/dialog_title"
        style="@style/Text.Header2"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/add_message"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kindliness_column"
        style="@style/TextInputLayoutStyle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/kindliness_message"
        app:layout_constraintEnd_toEndOf="@id/guideline_right"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/dialog_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kindliness_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:maxLength="255"
            android:maxLines="4"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_state_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/add"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/kindliness_column" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/dimens_16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/curahan_alter_gray"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kindliness_column" />


</androidx.constraintlayout.widget.ConstraintLayout>